--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>Welcome to my personal website! I am a passionate software developer with experience in various technologies. Here, you can find my portfolio and ways to contact me.</p>
-        <img class="profile" src="images/profile .jpg" alt="Photo of Emmanuel Ulodo">
+        <img class="profile" src="images/profile6.jpg .jpg" alt="Photo of Emmanuel Ulodo">
         <br>
         <br>
         <a href="./images/Emmanuel-Ulodo-Resume.pdf" download="">Download Cv</a>
